<resources>
    <string name="app_name">Gantt</string>
    <string name="task_name">Build Frame</string>
    <string name="project_date">11/1/19-11/12/19</string>
    <string name="task_item">Cut Tubes</string>
    <string name="edit_task">Add Task</string>
    <string name="upload_file">Upload File</string>
    <string name="task_item_details">Cut 4 pieces of 1\" 0.065 tubes with lengths  of 5\"</string>
    <string name="skills_needed">Skills Needed</string>
    <string name="skill_description">Chop Saw</string>
    <string name="add_skill">Add Skill</string>
    <string name="files">Files</string>
    <string name="file_name">SecondaryMembers.pdf</string>
    <string name="date_column">Date</string>
    <string name="date_completed">Date Completed</string>
    <string name="date_completed_hint">12/04/19</string>
    <string name="notes_title">Notes</string>
    <string name="notes">Completed by: \nPut notes here about project completion.</string>
    <string name="submit">Submit</string>

    <string name="login_message">Enter login information:</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

    <string name="project_name">My Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finished">Finished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>


</resources>
